clusters/nwk1/gitops/traefik/_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    cert-manager-tls: rabbito-tech-tls
